# rust-decision-records

./: Cargo.toml  README.md  TODO.md
.github/workflows/: BuildReleases.yml  RunTests.yml  build.yml
src/: config.rs  decision_record.rs  init.rs  main.rs
tests/: cli_base.rs  cli_init.rs  cli_new.rs
