[package]
name = "decision-record"
version = "0.0.1"
edition = "2018"
authors = [ "Decision Records Team [https://github.com/DecisionRecords]" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive", "cargo"] }
clap_complete = "4.1"
regex = "1.7"
lazy_static = "1.4"
glob = "0.3"
pathdiff = "0.2"
slug = "0.1"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"